# riched-version-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  package-lock.json  package.json
.github/workflows/: ci.yml
example/: Cargo.toml  Gemfile  Package.swift  composer.json  go.mod  package.json  pom.xml  pubspec.yaml  pyproject.toml  requirements.txt  versions.tf
src/: extension.ts
src/core/: markerProvider.ts  versionChecker.ts
src/processors/: npmProcessor.ts  processorFactory.ts  pythonProcessor.ts  rubyGemsProcessor.ts
src/providers/: changelogHoverProvider.ts  npmProvider.ts  pythonProvider.ts  rubyGemsProvider.ts
src/test/: runTest.ts
src/test/suite/: changelogHoverProvider.test.ts  index.ts  markerProvider.test.ts  npmProvider.test.ts  pythonProvider.test.ts  testHelper.ts
src/types/: fileTypes.ts
src/utils/: changelogFetcher.ts  logger.ts
